--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
 Add verification of new registered images
 Add methods to get names descriptions etc
-Add crawler for folder or something?
+Add method to check for new images, and prompt to register the images
+Add method to give full path to image based on id
